--- a/public/index.css
+++ b/public/index.css
@@ -479,15 +479,6 @@ video {
 .fixed {
   position: fixed;
 }
-.absolute {
-  position: absolute;
-}
-.relative {
-  position: relative;
-}
-.inset-0 {
-  inset: 0px;
-}
 .inset-x-0 {
   left: 0px;
   right: 0px;
@@ -529,20 +520,8 @@ video {
 .mt-10 {
   margin-top: 2.5rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-.mb-8 {
-  margin-bottom: 2rem;
-}
-.mr-14 {
-  margin-right: 3.5rem;
-}
-.mt-7 {
-  margin-top: 1.75rem;
-}
-.mt-\[100px\] {
-  margin-top: 100px;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .block {
   display: block;
@@ -601,33 +580,6 @@ video {
 .h-screen {
   height: 100vh;
 }
-.h-1\/3 {
-  height: 33.333333%;
-}
-.h-10 {
-  height: 2.5rem;
-}
-.h-16 {
-  height: 4rem;
-}
-.h-20 {
-  height: 5rem;
-}
-.h-8 {
-  height: 2rem;
-}
-.h-9 {
-  height: 2.25rem;
-}
-.h-\[385px\] {
-  height: 385px;
-}
-.h-\[692px\] {
-  height: 692px;
-}
-.h-full {
-  height: 100%;
-}
 .max-h-screen {
   max-height: 100vh;
 }
@@ -664,20 +616,14 @@ video {
 .w-full {
   width: 100%;
 }
-.w-44 {
-  width: 11rem;
+.w-\[\] {
+  width: ;
 }
-.w-\[272px\] {
-  width: 272px;
+.w-\[700\] {
+  width: 700;
 }
-.w-\[352px\] {
-  width: 352px;
-}
-.w-\[368px\] {
-  width: 368px;
-}
-.flex-none {
-  flex: none;
+.w-\[700px\] {
+  width: 700px;
 }
 .table-auto {
   table-layout: auto;
@@ -712,21 +658,6 @@ video {
 .justify-items-stretch {
   justify-items: stretch;
 }
-.-space-y-28 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(-7rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(-7rem * var(--tw-space-y-reverse));
-}
-.-space-y-32 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(-8rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(-8rem * var(--tw-space-y-reverse));
-}
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -742,17 +673,11 @@ video {
 .rounded-md {
   border-radius: 0.375rem;
 }
-.rounded-sm {
-  border-radius: 0.125rem;
-}
 .border-0 {
   border-width: 0px;
 }
 .border-\[1px\] {
   border-width: 1px;
-}
-.border-2 {
-  border-width: 2px;
 }
 .border-b {
   border-bottom-width: 1px;
@@ -801,10 +726,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(202 138 4 / var(--tw-border-opacity));
 }
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
 .bg-\[\#ff007f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 127 / var(--tw-bg-opacity));
@@ -820,14 +741,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
@@ -859,26 +772,11 @@ video {
 .pr-3 {
   padding-right: 0.75rem;
 }
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-.pt-10 {
-  padding-top: 2.5rem;
-}
-.pt-3 {
-  padding-top: 0.75rem;
-}
-.pt-5 {
-  padding-top: 1.25rem;
-}
 .text-left {
   text-align: left;
 }
 .text-center {
   text-align: center;
-}
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 .text-3xl {
   font-size: 1.875rem;
@@ -888,15 +786,16 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .font-bold {
   font-weight: 700;
-}
-.font-semibold {
-  font-weight: 600;
 }
 .text-gray-700 {
   --tw-text-opacity: 1;
@@ -905,25 +804,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
-}
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
-}
-.opacity-50 {
-  opacity: 0.5;
 }
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1073,10 +953,6 @@ video {
 
   .md\:w-full {
     width: 100%;
-  }
-
-  .md\:shrink-0 {
-    flex-shrink: 0;
   }
 
   .md\:rounded-full {
